--- a/TiffSplitter/Form1.resx
+++ b/TiffSplitter/Form1.resx
@@ -123,4 +123,7 @@ a. Only files with .tif or .tiff extensions are analyzed - all other files are i
 b. TIFF files that contain only one image are ignored
 c. After a multi-image TIFF is split, it's moved to an 'Originals' subfolder</value>
   </data>
+  <metadata name="statusStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
 </root>
